# dominator-example

./: Cargo.toml  README.md
.github/workflows/: main.yml  pr.yml  update.yml
src/: app.rs  lib.rs
static/: index.html
xtask/: Cargo.toml
xtask/src/: main.rs
