[package]
name = "dominator-example"
version = "0.1.0"
edition = "2021"
authors = ["yozhgoor <yozhgoor@outlook.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[lib]
crate-type = ["cdylib"]

[workspace]
members = [
    "xtask",
]

[dependencies]
console_error_panic_hook = "0.1.6"
dominator = "0.5.18"
wasm-bindgen = "0.2.74"
futures-signals = "0.3.20"
once_cell = "1.7.2"
